clusters/thestral/apps/network/envoy-gateway/external/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-external
  addresses:
    - type: IPAddress
      value: 10.100.10.220
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.schwarz47.at"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: schwarz47-at-tls
